# ElainaBot_v2

./: .gitignore  .pre-commit-config.yaml  PLUGIN_DEVELOPMENT.md  README.md  bot_restarter.py  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml  test.yml
config/: bot.example.yaml  settings.example.yaml  templates.example.yaml
core/: application.py  bot.py
core/base/: config.py  console.py  context.py  logger.py  pip_helper.py  sign.py  tasks.py
core/bot/: event.py  instance.py  manager.py  registry.py
core/extension/: loader.py
core/message/: __init__.py  _http.py  _media_send.py  _sender_log.py  bot_openid.py  event.py  event_router.py  keyboard.py  media.py  parsers.py  sender.py  template.py
core/module/: hook.py  manager.py
core/network/: access.py  http_compat.py  websocket.py
core/plugin/: _blacklist.py  _dispatch.py  _loader.py  _watcher.py  context.py  decorators.py  manager.py  web_pages.py
core/server/: http_server.py  webhook.py
core/services/: config_watcher.py  media_cleanup.py  scheduler.py
core/storage/: _base.py  _daily_base.py  _schema.py  dau.py  lifecycle_stats.py  log.py  (+4 more)
tests/: conftest.py  helpers.py  test_api_auth.py  test_api_bot.py  test_api_config.py  test_api_database.py  test_api_logs.py  test_api_market.py  test_api_message.py  test_api_middleware.py  test_api_openapi.py  test_api_plugins.py  test_api_statistics.py  test_api_system.py  test_api_update.py  test_openapi_scanlogin.py
web/: api.py  auth.py  deprecated_files.json  response.py  setup.py  ws.py
(+134 files in other folders)
