[project]
name = "elainabot"
version = "2.0.0"
description = "ElainaBot - QQ Official Bot Framework"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

dependencies = [
    "pyyaml>=6.0.3,<7.0",
    "aiohttp>=3.9.0,<3.15.0",
    "httpx>=0.28.1,<0.29.0",
    "websockets>=16.0,<16.1",
    "cryptography>=49.0.0,<50.0",
    "psutil>=7.2.2,<8.0",
    "python-dotenv>=1.2.2,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<0.26",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.8,<1.14",
    "ruff>=0.4,<0.11",
    "types-PyYAML",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: 单元测试 (快速, 无外部依赖)",
    "integration: 集成测试 (需要配置/模块/网络等外部依赖)",
    "slow: 耗时较长的测试",
    "e2e: 端到端测试 (需要浏览器或完整环境)",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "modules/",
    "plugins/",
    "data/",
    "tests/",
    "web/dist/",
]

[tool.ruff]
target-version = "py311"
line-length=160

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"


[tool.coverage.run]
source = ["core", "web"]
omit = ["tests/*", "web/dist/*"]
